# ads-skill

./: .env.example  .gitignore  SKILL.md  main.py  pyproject.toml  requirements.txt
ads_skill/: auth.py  cli.py  client.py  config.py  display.py
